[tool.poetry]
name = "pystream-server"
version = "0.1.0"
description = "Simple python stream server"
authors = ["Sergey Demenok <sergey.demenok@gmail.com>"]
packages = [{ include = 'pystream-server.py' }]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
mypy = "^0.790"
isort = "^5.6.3"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = '1'
target-version = ['py38']

[tool.isort]
default_section = 'THIRDPARTY'
known_application_apps = ['pystream-server.py']
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'APPLICATION_APPS', 'LOCALFOLDER']
line_length = 100
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3

[mypy]
python_version = 3.8
ignore_errors = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
disallow_untyped_calls = true
